@@ -25,7 +25,12 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
-2009-07-30 Stephane Letz  <letz@grame.fr>
+2009-07-31 Stephane Letz  <letz@grame.fr>
+
+	* Use SNDCTL_DSP_SYNCGROUP/SNDCTL_DSP_SYNCSTART API to synchronize input and output in Solaris boomer backend.
+
+
+2009-07-29 Stephane Letz  <letz@grame.fr>
 
 	* Add a -G parameter in CoreAudio backend (the computation value in RT thread expressed as percent of period).
 
